# ===============================================================================
# Authors: AFRL/RQQA
# Organization: Air Force Research Laboratory, Aerospace Systems Directorate, Power and Control Division
#
# Copyright (c) 2017 Government of the United State of America, as represented by
# the Secretary of the Air Force.  No copyright is claimed in the United States under
# Title 17, U.S. Code.  All Other Rights Reserved.
# ===============================================================================

# This file was auto-created by LmcpGen. Modifications will be overwritten.

[package]
name = "lmcp"
version = "0.1.0"
authors = ["LmcpGen"]

[dev-dependencies]
quickcheck = "0.4"

[[bin]]
name = "mybin"
path = "src/main.rs"
