# ===============================================================================
# Authors: AFRL/RQQA
# Organization: Air Force Research Laboratory, Aerospace Systems Directorate, Power and Control Division
#
# Copyright (c) 2017 Government of the United State of America, as represented by
# the Secretary of the Air Force.  No copyright is claimed in the United States under
# Title 17, U.S. Code.  All Other Rights Reserved.
# ===============================================================================

# This file was auto-created by LmcpGen. Modifications will be overwritten.

[package]
name = "lmcp_derive"
version = "0.1.0"
authors = ["jgancher"]

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
syn = "0.11.11"
quote = "0.3"
